@@ -1,5 +1,8 @@
 devel
 -----
+
+* Add API for deployment ID: /_admin/deployment/id .
+
 * Add vertex collections for graph queries using edge collection syntax
   from named graphs. This means that if a query uses edge collection syntax
   and a named graph defines the from and to vertex collections for that edge
